--- a/djangoapp/requirements.txt
+++ b/djangoapp/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.8.1
 Django>=5.1.1,<5.2
-pillow==10.4.0
-python-dotenv==1.0.1
-sqlparse==0.5.1
+pillow>=10.4.0,<=10.5
+python-dotenv>=1.0.1,<=1.1
+sqlparse>=0.5.1,<=0.6
 tzdata==2024.1
 psycopg2-binary==2.9.9
