--- a/djangoapp/requirements.txt
+++ b/djangoapp/requirements.txt
@@ -6,3 +6,5 @@ sqlparse>=0.5.1,<=0.6
 tzdata==2024.1
 psycopg2-binary==2.9.9
 django-summernote>=0.8.20.0,< 0.8.21
+python-dotenv>=1.0.0,<1.1
+django-axes>=6.0.1,<6.1
